# cs5260-travel-agent

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/: guards.py  utils.py
backend/src/agents/: __init__.py  critic.py  edit.py  ingestion.py  llm.py  meal.py  shared.py
backend/src/agents/supervisor/: __init__.py  graph.py  root_concierge.py  state.py  sub_coordinators.py
backend/src/agents/swarm/: __init__.py  graph.py  state.py
backend/src/agents/workers/: __init__.py  activities.py  flight.py  hotel.py  transport.py
backend/src/api/: main.py
backend/src/api/middleware/: rate_limit.py
backend/src/api/models/: requests.py  responses.py
backend/src/api/routes/: auth.py  itineraries.py  plan.py  plan_edit.py  plan_select.py  plan_stream.py
backend/src/auth/: jwt.py
backend/src/db/: repository.py
backend/src/models/: __init__.py  ingestion.py
backend/src/prompts/: activities.py  critic.py  day_planner_single_day.py  edit.py  flight.py  hotel.py  ingestion.py  meal.py  transport.py
backend/src/state/: blackboard.py  models.py  violations.py
backend/src/tools/: __init__.py  grounding.py  places.py  serpapi_flights.py
backend/src/utils/: guards.py  jwt.py  utils.py
db/migrations/: V1__initial_schema.sql  (+4 more)
docs/: devops-deployment.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
scripts/: invalidate_coordless_cache.py
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+34 files in other folders)
