[project]
name = "cs5260-travel-agent-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph==1.0.9",
    "langgraph-prebuilt==1.0.8",
    "langchain>=0.3",
    "langchain-google-genai>=2",
    "fastapi[standard]>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "python-dotenv>=1",
    "langsmith>=0.2",
    "google-generativeai>=0.8",
    "httpx>=0.27",
    "beautifulsoup4>=4",
    "PyJWT>=2.0",
    "bcrypt>=4",
    "sse-starlette>=3.3.2",
    "slowapi>=0.1.9",
    "amadeus>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
